# CDIE

./: .env.example  .gitignore  .pre-commit-config.yaml  DEMO.md  Dockerfile.api  Dockerfile.nextjs  Dockerfile.pipeline  Dockerfile.ui  LICENSE  OPEA_CONTRIBUTION.md  README.md  TECHNICAL_REPORT.md  audit_out.json  cdie_ui_recommendation.md  cdie_ui_req.md  checklist_res.txt  consistency_report.md  current_ruff_errors.txt  db_dump.json  debug_lookup.py  docker-compose.yml  docker_start.cmd  mypy_errors.txt  mypy_errors2.txt  mypy_parsed.txt  parse_mypy.py  print_errors.py  pyproject.toml  pytest.ini  requirements.txt  ruff_errors.json  setup.cmd  setup.sh  start_local.cmd  test_api_ingest.py  test_ingestion_local.py  test_out.txt  test_prior_extractor.py  to_do.md  to_fix.md
.runtime/: safety_map.runtime.db.tmp  safety_map.runtime.db.tmp-journal
.tmp/: test_sqlite.db  test_sqlite.db-journal
benchmarks/: inspect_results.py  intel_benchmark_results.json  intel_hardware_benchmark.py  reproduce_results.py  run_benchmarks.py  sanity_check.py  scaling_benchmark.py
cdie/: __init__.py  config.py  observability.py  runtime.py
config/: cate_segments.yaml  magnitude_heuristics.yaml
data/: graph.html  safety_map.db.bak  safety_map.db.bak-journal  safety_map.db.tmp  safety_map.db.tmp-journal  synthetic_prior_test.txt  test_sqlite.db-journal
docs/: DEPLOYMENT_READINESS.md  MIGRATION_v4_v5.md  OPERATIONAL_RUNBOOK.md  PLAN-cate-hte-module.md  README.md  TROUBLESHOOTING.md  api_reference.md  architecture.md  causal_pipeline.md  development.md  installation.md  introduction.md  opea_integration.md
drafts/: devto_article.md  linkedin_post.md
figs/: 01_system_architecture.html  01_system_architecture.mmd  02_offline_pipeline.html  02_offline_pipeline.mmd  03_online_rag_flow.html  03_online_rag_flow.mmd  04_causal_dag.html  04_causal_dag.mmd  05_deployment_architecture.html  05_deployment_architecture.mmd  06_component_diagram.html  06_component_diagram.mmd  07_data_flow.html  07_data_flow.mmd  08_sequence_diagram.html  08_sequence_diagram.mmd  09_er_diagram.html  09_er_diagram.mmd  10_use_case.html  10_use_case.mmd  11_gantt_chart.html  11_gantt_chart.mmd  12_state_diagram.html  12_state_diagram.mmd  (+8 more)
(+137 files in other folders)
