[tool.ruff]
# Target Python version
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I), and subset of others
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID"]
# ARG001: FastAPI endpoints with @limiter.limit() require `request: Request`
# even when unused — it's injected by slowapi for rate-limit key extraction.
# lifespan(app) also requires the `app` param per FastAPI protocol.
ignore = ["ARG001"]

[tool.ruff.lint.per-file-ignores]
"cdie/api/main.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]

[[tool.mypy.overrides]]
module = [
    "causal_learn.*",
    "dowhy.*",
    "econml.*",
    "mapie.*",
    "pgmpy.*",
    "networkx.*",
    "pyvis.*",
    "sklearn.*",
    "pandas.*",
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "structlog.*",
    "tenacity.*"
]
ignore_missing_imports = true

[project]
name = "cdie"
version = "5.0.0"
description = "Causal Decision Intelligence Engine"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiofiles>=23.2.1",
    "causal-learn>=0.1.3.8",
    "dowhy>=0.11.0",
    "econml>=0.15.0",
    "fastapi>=0.110.0",
    "httpx>=0.27",
    "joblib>=1.3",
    "mapie>=0.8.0",
    "matplotlib>=3.8",
    "networkx>=3.0",
    "numpy>=1.26.4",
    "openai>=1.0",
    "pandas>=2.2.1",
    "pgmpy>=0.1.25",
    "psutil>=5.9",
    "pydantic>=2.6.3",
    "python-multipart>=0.0.9",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.1",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "shap>=0.45.0",
    "slowapi>=0.1.9",
    "statsmodels>=0.14.0",
    "streamlit>=1.32.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "uvicorn>=0.29.0",
    "xgboost>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.98.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "pre-commit>=3.7.0",
    "types-redis",
    "types-requests"
]
